tests/failing/type_annotation.db
const var age: Int = 28!
const var age: Int9 = 28!